--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,9 @@
           </table>
         </div>
       </section>
+      <div class="card-footer">
+        <a href="/cadastro" class="btn btn-primary mb-2">Novo Produto</a>
+      </div>
     </div>
   </body>
 </html>
