--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
                 <th>Descrição</th>
                 <th>Preço</th>
                 <th>Quantidade</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody>
@@ -42,6 +43,11 @@
                 <td>{{.Descricao}}</td>
                 <td>{{.Preco}}</td>
                 <td>{{.Quantidade}}</td>
+                <td>
+                  <a href="/delete?id={{.Id}}" class="btn btn-danger"
+                    >Deletar</a
+                  >
+                </td>
               </tr>
               {{end}}
             </tbody>
